--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
-# This requirements file lists all third-party dependencies for this project.
-#
-# Run 'pip install -r requirements.txt' to install these dependencies.
-pytz
-textblob==0.9.0
+certifi==2024.6.2
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+idna==3.7
+joblib==1.4.2
+nltk==3.8.1
+pytz==2024.1
+regex==2024.5.15
+requests==2.32.3
+textblob==0.18.0.post0
+tqdm==4.66.4
+urllib3==2.2.1
