--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-certifi==2024.6.2
+certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-idna==3.7
+idna==3.10
 joblib==1.4.2
 nltk==3.8.1
-pytz==2024.1
-regex==2024.5.15
+python-dotenv==1.0.1
+pytz==2024.2
+regex==2024.9.11
 requests==2.32.3
 textblob==0.18.0.post0
-tqdm==4.66.4
-urllib3==2.2.1
+tqdm==4.66.5
+urllib3==2.2.3
